# api/api.swagger.json
@@ -17,7 +17,7 @@
     ],
     "paths": {
         "/adduser": {
-            "get": {
+            "post": {
                 "summary": "增删改查",
                 "responses": {
                     "200": {
@@ -40,16 +40,12 @@
                 },
                 "parameters": [
                     {
-                        "name": "nickname",
-                        "in": "query",
+                        "name": "body",
+                        "in": "body",
                         "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "age",
-                        "in": "query",
-                        "required": true,
-                        "type": "integer"
+                        "schema": {
+                            "$ref": "#/definitions/.demo.service.v1.AddReq"
+                        }
                     }
                 ],
                 "tags": [
@@ -83,7 +79,7 @@
                     {
                         "name": "uid",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "type": "integer"
                     }
                 ],
@@ -93,7 +89,7 @@
             }
         },
         "/getuser": {
-            "get": {
+            "put": {
                 "summary": "/getuser",
                 "responses": {
                     "200": {
@@ -116,10 +112,12 @@
                 },
                 "parameters": [
                     {
-                        "name": "uid",
-                        "in": "query",
+                        "name": "body",
+                        "in": "body",
                         "required": true,
-                        "type": "integer"
+                        "schema": {
+                            "$ref": "#/definitions/.demo.service.v1.GetReq"
+                        }
                     }
                 ],
                 "tags": [
@@ -180,7 +178,7 @@
                     {
                         "name": "name",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "type": "string"
                     }
                 ],
@@ -190,7 +188,7 @@
             }
         },
         "/updateuser": {
-            "get": {
+            "put": {
                 "summary": "/updateuser",
                 "responses": {
                     "200": {
@@ -213,22 +211,12 @@
                 },
                 "parameters": [
                     {
-                        "name": "uid",
-                        "in": "query",
+                        "name": "body",
+                        "in": "body",
                         "required": true,
-                        "type": "integer"
-                    },
-                    {
-                        "name": "nickname",
-                        "in": "query",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "age",
-                        "in": "query",
-                        "required": true,
-                        "type": "integer"
+                        "schema": {
+                            "$ref": "#/definitions/.demo.service.v1.UpdateReq"
+                        }
                     }
                 ],
                 "tags": [
@@ -263,13 +251,13 @@
                     {
                         "name": "username",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "type": "string"
                     },
                     {
                         "name": "passwd",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "type": "string"
                     }
                 ],
@@ -290,11 +278,7 @@
                     "type": "integer"
                 }
             },
-            "description": "增删改查接口响应参数",
-            "required": [
-                "nickname",
-                "age"
-            ]
+            "description": "增删改查接口响应参数"
         },
         ".demo.service.v1.DeleteReq": {
             "type": "object",
@@ -302,10 +286,7 @@
                 "uid": {
                     "type": "integer"
                 }
-            },
-            "required": [
-                "uid"
-            ]
+            }
         },
         ".demo.service.v1.GetReq": {
             "type": "object",
@@ -313,10 +294,7 @@
                 "uid": {
                     "type": "integer"
                 }
-            },
-            "required": [
-                "uid"
-            ]
+            }
         },
         ".demo.service.v1.HelloReq": {
             "type": "object",
@@ -325,10 +303,7 @@
                     "type": "string"
                 }
             },
-            "description": "---------------------------------下面这个不是-----------------------------------------//\n定义请求参数",
-            "required": [
-                "name"
-            ]
+            "description": "---------------------------------下面这个不是-----------------------------------------//\n定义请求参数"
         },
         ".demo.service.v1.HelloResp": {
             "type": "object",
@@ -349,11 +324,7 @@
                     "type": "string"
                 }
             },
-            "description": "--------------------自定义message--------------------------//",
-            "required": [
-                "username",
-                "passwd"
-            ]
+            "description": "--------------------自定义message：自定义验证器错误消息--------------------------//\n-----jsontag\n-----其他tag（moretags）\n-----form：\n-----validate：验证器\n------required：字段为必填项，值不能为空"
         },
         ".demo.service.v1.LoginResp": {
             "type": "object",
@@ -367,6 +338,12 @@
         ".demo.service.v1.Response": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "globalcode.Msg[code]": {
+                    "type": "string"
+                },
                 "content": {
                     "type": "string"
                 }
@@ -384,12 +361,7 @@
                 "age": {
                     "type": "integer"
                 }
-            },
-            "required": [
-                "uid",
-                "nickname",
-                "age"
-            ]
+            }
         },
         ".google.protobuf.Empty": {
             "type": "object",
